kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: injection
  labels:
    app: injection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: injection
  template:
    metadata:
      labels:
        app: injection
    spec:
      containers:
        - name: injection
          image: anticorona/injection:latest
          volumeMounts:
            - name: volume
              mountPath: "/mnt/azure"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: azure-managed-disk
