kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: injection
  labels:
    app: injection
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: injection
